--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "motion": "^12.23.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.134.0",
