--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -41,8 +41,8 @@ RUN bundle install && \
 
 # Copy application code
 COPY . .
-#Ensure mongoid.yml is present in /rails/config
-COPY config/mongoid.yml rails/mongoid.yml
+#Ensure mongoid.yml is present in /rails
+COPY config/mongoid.yml /rails/mongoid.yml
 
 # Precompile bootsnap code for faster boot times
 RUN bundle exec bootsnap precompile app/ lib/
@@ -61,6 +61,9 @@ FROM base
 # Copy built artifacts: gems, application
 COPY --from=build "${BUNDLE_PATH}" "${BUNDLE_PATH}"
 COPY --from=build /rails /rails
+
+# Ensure mongoid.yml is present at /rails/mongoid.yml
+COPY config/mongoid.yml /rails/mongoid.yml
 
 # Run and own only the runtime files as a non-root user for security
 RUN groupadd --system --gid 1000 rails && \
